<resources>
    <string name="app_name">Inspect A Car</string>
    <string name="title_activity_main222">MainActivity222</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="enter_your_password">Enter user password</string>
    <string name="login">Login</string>
    <string name="enter_user_email">Enter user email</string>
    <string name="sn12345">SN12345</string>
    <string name="vehicle_inspection">Vehicle Inspection</string>
    <string name="pdf_files_read_only">Pdf Files (read only)</string>
    <string name="complete_draft">Complete Draft</string>
    <string name="tyres">Tyres</string>
    <string name="exterior_body">Exterior Body</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="mark_schemantic">Mark schemantic</string>
    <string name="goBack">Go Home</string>
    <string name="continue_text">Continue Next</string>
    <string name="preliminary_info">Preliminary Info</string>
    <string name="close">Close</string>
    <string name="personal_information">Personal Information</string>
    <string name="eraser_on">Eraser:on</string>
    <string name="eraser_off">Eraser:off</string>
    <string name="save">Save</string>
    <string name="save_amp_send"><![CDATA[Save & Send]]></string>
    <string name="accidental_checklist">Accidental Checklist</string>
    <string name="mechanical_function">Mechanical Function</string>
    <string name="a_c_amp_heater"><![CDATA[A/C & Heater]]></string>
    <string name="interior">Interior</string>
    <string name="electronic_function">Electronic Function</string>
    <string name="suspension_function">Suspension Function</string>
    <string name="accessories">Accessories</string>
    <string name="test_drive">Test Drive</string>
    <string name="save_send">Save Send</string>
</resources>