<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="loginViewModel"
            type="com.example.autoinspectionapp.presentation.ui.fragments.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue_color"
        tools:context=".ui.login.LoginFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imgIntroOne"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@id/viewBottomName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/app_log" />

        <View
            android:id="@+id/viewBottomName"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bottom_intro"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.8"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/motionLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_15sdp"
            app:layoutDescription="@xml/serial_tooltip_scene"
            app:layout_constraintEnd_toEndOf="@+id/viewBottomName"
            app:layout_constraintTop_toTopOf="@+id/viewBottomName">
            <!-- Tooltip bubble -->
            <LinearLayout
                android:id="@+id/serialBubble"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_tooltip_bubble"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/_6sdp">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSerial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingHorizontal="@dimen/_2sdp"
                    android:text="@string/sn12345"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/imgExpand"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_forward"
                    app:tint="@android:color/white" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/tvSerialDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alpha="0"
                    android:background="@drawable/bg_tooltip_expanded"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="@id/serialBubble"
                    app:layout_constraintStart_toStartOf="@id/serialBubble"
                    app:layout_constraintTop_toBottomOf="@id/serialBubble" />
            </LinearLayout>
        </androidx.constraintlayout.motion.widget.MotionLayout>


        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/splash_animation"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:elevation="@dimen/_5sdp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/edTextMail"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintEnd_toEndOf="@+id/viewBottomName"
            app:layout_constraintHeight_percent="1"
            app:layout_constraintStart_toStartOf="@+id/viewBottomName"
            app:layout_constraintTop_toTopOf="@+id/viewBottomName"
            app:layout_constraintWidth_percent="1"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/car_animation" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edTextMail"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:background="@drawable/bg_edit_text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:drawablePadding="@dimen/_10sdp"
            android:drawableTint="#334155"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/enter_user_email"
            android:inputType="textPersonName"
            android:maxLength="20"
            android:paddingStart="@dimen/_40sdp"
            android:paddingEnd="@dimen/_5sdp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/edTextPwd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.9" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icMail"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/edTextMail"
            app:layout_constraintStart_toStartOf="@+id/edTextMail"
            app:layout_constraintTop_toTopOf="@+id/edTextMail"
            app:srcCompat="@drawable/mail"
            app:tint="@color/blue_color" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_80sdp"
            android:background="@drawable/bg_done_btn"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14sdp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/viewBottomName"
            app:layout_constraintEnd_toEndOf="@id/viewBottomName"
            app:layout_constraintStart_toStartOf="@id/viewBottomName"
            app:layout_constraintWidth_percent="0.8" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edTextPwd"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginVertical="@dimen/_20sdp"
            android:background="@drawable/bg_edit_text"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
            android:drawablePadding="@dimen/_10sdp"
            android:fontFamily="@font/roboto_regular"
            android:hint="@string/enter_your_password"
            android:maxLength="20"
            android:paddingStart="@dimen/_40sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@+id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.9" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/icPwd"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginStart="@dimen/_10sdp"
            app:layout_constraintBottom_toBottomOf="@+id/edTextPwd"
            app:layout_constraintStart_toStartOf="@+id/edTextPwd"
            app:layout_constraintTop_toTopOf="@+id/edTextPwd"
            app:srcCompat="@drawable/lock"
            app:tint="@color/blue_color" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>